<resources>
    <string name="app_name">Music App</string>
    <string name="song_title">Song Title</string>
    <string name="artists">Artists</string>
    <string name="hello_from_detail_music">Hello from detail music</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="artist">Artist:</string>
    <string name="title">Title:</string>
    <string name="label">Label:</string>
    <string name="genres">Genres:</string>
    <string name="duration">Duration:</string>
    <string name="about_me">About Me</string>
    <string name="music_app">Music App</string>
    <string name="by_zuhal_alimul_hadi">By: Zuhal \'Alimul Hadi</string>
    <string name="share_this_song">Share this song</string>
    <string name="full_name">Zuhal \'Alimul Hadi</string>
    <string name="my_email">zuhalalimulhadi19@gmail.com</string>
    <string name="release_date">Release Date:</string>
    <string name="play_count">Play Count:</string>
</resources>