<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    card_view:cardBackgroundColor="#40FFFFFF"
    >
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:padding="8dp"
       >
       <de.hdodenhof.circleimageview.CircleImageView
           android:id="@+id/img_item_photo"
           android:layout_width="55dp"
           android:layout_height="55dp"
           android:layout_marginEnd="16dp"
           android:layout_gravity="center"
           tools:src="@tools:sample/avatars" />
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           >
           <TextView
               android:id="@+id/tv_song_title"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/song_title"
               android:textSize="18sp"
               android:textStyle="bold"
               android:textColor="@color/green"
               />
           <Space
               android:layout_width="wrap_content"
               android:layout_height="4dp" />
           <TextView
               android:id="@+id/tv_artist"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/artists"
               android:textColor="@color/white"
               />
           <TextView
               android:id="@+id/tv_album"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/lorem_ipsum"
               android:textColor="@color/white"
               />
       </LinearLayout>
   </LinearLayout>
</androidx.cardview.widget.CardView>